# dial-xl

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  build.gradle  settings.gradle
api/backend/python/xl-client/: Makefile  README.md  demo.py  pyproject.toml
python/assistant/: .dockerignore  .env.example  .flake8  .gitignore  .secrets.example.toml  Makefile  README.md  noxfile.py  poetry.toml  pyproject.toml  run.py  run_deploy.py  run_local.py  settings.toml  version.py
python/assistant/docs/: integration_tests.md  mvp_requirements.md
python/assistant/experiments/hints/: disney-questions.xlsx  hints.ipynb
python/assistant/parsing/: __init__.py  parsing.py
python/assistant/quantgrid/: app.py
python/assistant/quantgrid/application/: __init__.py  completion.py  preloader.py
python/assistant/quantgrid/configuration/: __init__.py  env.py  llm_models.py  logger.py
python/assistant/quantgrid/exceptions/: __init__.py  connection_closed.py  dial_xl_library_error.py  internal_error.py  invalid_llm_output.py  llm_unavailable.py  loading_exception.py  tool_error.py  tool_init_error.py  unsupported_message_type.py  xl_exception.py
python/assistant/quantgrid/formatting/: __init__.py  history_formatting.py  message_formatting.py
python/assistant/quantgrid/graph/: __init__.py  documentation_graph.py  general_graph.py  router_graph.py  solver_graph.py
python/assistant/quantgrid/models/: __init__.py  actions.py  chat_history.py  discriminated_action.py  exec_report.py  project_hint.py  raw_project_hint.py
python/assistant/quantgrid/python/: __init__.py  namespace_collector.py  python_environment.py  python_executor.py
python/assistant/quantgrid/startup/: __init__.py  load_credentials.py  load_examples.py  load_project.py  load_prompts.py  load_templates.py
python/assistant/quantgrid_1/: action_prompt.md  app.py  app_wrapper.py  log_config.py  prompts.py  tokens.py
python/assistant/quantgrid_1/chains/: action_fixer.py  action_generator.py  action_publisher.py  action_route.py  changed_sheets_publisher.py  classifier.py  documentation.py  embeddings.py  explanation.py  general.py  head_fetcher.py  hint_finder.py  history_builder.py  import_csv.py  init.py  main_route.py  materializer.py  parameters.py  project_focus.py  question_saver.py  route.py  state.py
python/assistant/quantgrid_1/models/: action.py  application_state.py  config_parameters.py  embeddings.py  focus.py  focus_tool.py  generation_parameters.py  history.py  materialize_button.py  project.py  project_state.py  question.py  question_status.py  request_parameters.py  request_type.py  stage.py  stage_generation_type.py
python/assistant/quantgrid_1/questions/: model.py  path_util.py  question_api.py  router.py  save_question.py
python/assistant/quantgrid_1/utils/: action_converter.py  action_stream_splitter.py  actions.py  choice_cacher.py  create_exception_stage.py  errors.py  fetch_context_window.py  filter_stream.py  formatting.py  jwt_validator.py  project_utils.py  pydantic_validators.py  qg_api.py  save_question.py  stages.py  stream_content.py  viewports.py
python/assistant/quantgrid_2a/: app.py
python/assistant/quantgrid_2a/application/: completion.py  preloader.py
python/assistant/quantgrid_2a/configuration/: __init__.py  env.py  logger.py
python/assistant/quantgrid_2a/examples/: dices.yaml
python/assistant/quantgrid_2a/exceptions/: __init__.py  connection_closed.py  internal_error.py  invalid_llm_output.py  llm_unavailable.py  loading_exception.py  qg_exception.py
python/assistant/quantgrid_2a/formatting/: __init__.py  message_formatting.py  state_formatting.py
python/assistant/quantgrid_2a/functions/: abs.yaml  average.yaml  concatString.yaml  date.yaml  dateRange.yaml  day.yaml  filter.yaml  first.yaml  formulaIndex.yaml  if.yaml  ifNa.yaml  index.yaml  isNa.yaml  isSubString.yaml  last.yaml  left.yaml  length.yaml  lower.yaml  max.yaml  min.yaml  mode.yaml  month.yaml  range.yaml  right.yaml  sortBy.yaml  sqrt.yaml  stdEVS.yaml  sum.yaml  text.yaml  uniqueBy.yaml  upper.yaml  value.yaml  year.yaml
python/assistant/quantgrid_2a/graph/: __init__.py  agent_config.py  router_graph.py  solver_graph.py
python/assistant/quantgrid_2a/models/: __init__.py  actions.py  chat_state.py  function_info.py  root_action.py  tool_artifact.py
python/assistant/quantgrid_2a/prompts/: DEPRECATED_generator_prompt.md  DEPRECATED_importer_prologue.md  DEPRECATED_planner_prompt.md  core.md  lambdas.md  router_prologue.md  solver_prompt.md
python/assistant/quantgrid_2a/pseudo/: Formula.g4  __init__.py  converter.py  error_converter.py  errors.py  lexer_errors.py  parser_errors.py
python/assistant/quantgrid_2a/startup/: __init__.py  load_examples.py  load_model.py  load_project.py  load_prompts.py
python/assistant/quantgrid_2a/utils/: __init__.py  dial_api.py  embedding_service.py  project.py  pseudo_type.py  quote.py  table_entries.py  table_schemas.py
python/assistant/resources/actions/: dial_xl_doc.md  human.jinja  system.md  workspace.jinja
python/assistant/scripts/: clean.py  healthcheck.py
python/assistant/testing/: conftest.py  excel_report.py  json_report.py  pytest.ini  quantgrid_report.py
python/assistant/testing/environments/: __init__.py  advertisers_project.py  all_actions_project.py  basic_project.py  casualties_project.py  (+9 more)
python/assistant/tests/: config.py  conftest.py  test_mock.py
python/question-converter/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
python/xl-client/: .dockerignore  .flake8  Makefile  README.md  demo.py  noxfile.py  pyproject.toml
python/xl-client/dial_xl/: apply.py  calculate.py  client.py  compile.py  credentials.py  decorator.py  dial.py  doc_string.py  dynamic_field.py  events.py  field.py  field_groups.py  overrides.py  project.py  reader.py  sheet.py  table.py  total.py  totals.py  utils.py
python/xl-client/tests/: common.py  test_apply.py  test_doc_string.py  test_field.py  test_field_group.py  test_overrides.py  test_project.py  test_sheet.py  test_table.py  test_total.py  utils.py
(+3067 files in other folders)
