[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
authors = [
    { name = "EPAM" },
    { name = "DIAL" }
]

name = "dial-xl-assistant"
version = "0.0.1"
readme = "README.md"
repository = "https://gitlab.deltixhub.com/Deltix/quantgrid"
requires-python = ">= 3.12, < 3.13"

# TODO: Move mlflow-related stuff into optional mutually exclusive dependency group
dependencies = [
    "aidial-client (>= 0.4, < 0.5)",
    "aidial-sdk (>= 0.30, < 0.31)",
    "atpublic (>= 7.0, < 8.0)",
    "attrs (>= 25.0, < 26.0)",
    "dial-xl",
    "dynaconf (>= 3.0, < 4.0)",
    "fastapi (>= 0.128.0, < 0.129.0)",
    "jinja2 (>= 3.0, < 4.0)",
    "langchain (>= 1.0, < 2.0)",
    "langchain-core (>= 1.0, < 2.0)",
    "langchain-openai (>= 1.0, < 2.0)",
    "langgraph (>= 1.0, < 2.0)",
    "mlflow (>= 3.0, < 4.0)",
    "pycryptodome (>= 3.0, < 4.0)",
    "python-dotenv (>= 1.0, < 2.0)",
    "PyYAML (>= 6.0, < 7.0)",
    "sqids (>= 0.5, < 0.6)",
    "tabulate (>= 0.9, < 1.0)",
    "uvicorn (>= 0.40, < 0.41)",
]

[dependency-groups]
lint = [
    "mypy (>= 1.0, < 2.0)",
    "ruff (>= 0.14, < 0.15)",
    # Type Stubs
    "boto3-stubs (>= 1.40, < 2.0)",
    "scipy-stubs (>= 1.16, < 2.0)",
    "types-networkx (>= 3.5, < 4.0)",
    "types-PyYAML (>= 6.0, < 7.0)",
    "types-tabulate (>= 0.9, < 1.0)",
]

test = [
    "aidial-rag-eval (>= 0.4)",
    "boto3 (>= 1.40, < 2.0)",
    "httpx (>= 0.28, < 0.29)",
    "multiset (>= 3.0, < 4.0)",
    "networkx (>= 3.5, < 4.0)",
    "numpy (>= 1.26, < 2.0)",
    "pytest (>= 9.0, < 10.0)",
    "pytest-asyncio (>= 1.0, < 2.0)",
    "pytest-datadir (>= 1.0, < 2.0)",
    "pytest-dotenv (>= 0.5, < 0.6)",
    "pytest-repeat (>= 0.9, < 1.0)",
    "pytest-xdist (>= 3.6, < 4.0)",
    "statsmodels (>= 0.14, < 0.15)",
    "scipy (>= 1.16, < 2.0)",
    "xlsxwriter (>= 3.2, < 4.0)",
]

[tool.poetry]
exclude = [
    "src/dial/*.py",
    "src/dial/xl/*.py"
]

packages = [
    { include = "dial", from = "src" }
]

[tool.poetry.dependencies]
dial-xl = { path = "../xl-client", develop = false }

[tool.ruff]
extend-exclude = [
    "tests/e2e/utils/stats/*.py"
]

[tool.ruff.lint]
select = [
    "ANN", "ASYNC", "BLE", "FBT", "B", "A", "C4", "DTZ", "EM", "ISC", "LOG", "PIE",
    "PYI", "PT", "RSE", "RET", "SLF", "SIM", "SLOT", "TID", "TC", "ARG", "PTH", "I",
    "C90", "NPY", "PD", "N", "PERF", "E", "W", "F", "PLE1", "UP", "RUF", "TRY"
]

ignore = ["A001", "ANN401", "RUF012", "UP040"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["dial.xl.assistant.*", "tests.*"]
lines-between-types = 1

[tool.mypy]
packages = ["dial"]
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]
python_version = "3.12"
strict = true

disallow_subclassing_any = false
untyped_calls_exclude = ["aidial_client", "dial_xl"]


[[tool.mypy.overrides]]
module = "tests.e2e.utils.stats.*"
ignore_errors = true


[[tool.mypy.overrides]]
module = [
    "aidial_client.*", "aidial_rag_eval.*", "aidial_sdk.*",
    "dial_xl.model.*", "dynaconf.*", "xdist.*", "xlsxwriter.*"
]

ignore_missing_imports = true

[tool.pytest]
addopts = [
    "--doctest-modules",
    "--import-mode=append",
    "--tb=short",
    "-nauto"
]

asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"

cache_dir = "./.pytest_cache"

log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s <%(name)s> [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"

log_file = "./e2e-tests-log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s <%(name)s> [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_level = "INFO"

pythonpath = ["src"]
testpaths = ["tests"]
